[tool.poetry]
name = "proto"
version = "0.1.0"
description = ""
authors = ["krnr <ultrasnet@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

# Framework
fastapi = {extras = ["all"], version = "^0.62.0"}

# Libs
attrs = "^20.3.0"
redis = "^3.5.3"
structlog = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
